# comp0034-wk5

./: README.md  activity_authentication.md  activity_errors.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
paralympics/: __init__.py  models.py  routes.py  schemas.py  utilities.py
tests/: conftest.py  test_auth.py  test_browser.py  test_database.py  test_routes.py
